# bitverify

./: Cargo.toml  README
.github/workflows/: rust.yml
src/: address_converter.rs  lib.rs  verifier.rs
