[package]
name = "bitverify"
authors = ["twosatsmaxi"]
description = "verify messages signed using ECDSA (Elliptic Curve Digital Signature Algorithm) in Bitcoin."
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/twosatsmaxi/bitverify"

[dependencies]
secp256k1 = { version = "0.29.0", features = ["rand", "rand-std", "hashes"] }
bitcoin = "0.32.2"
bitcoin_hashes = "0.14.0"
base64 = "0.22.1"